fix for blue line and overlaping logo on mobile

--- a/app/assets/stylesheets/mobile/style.css
+++ b/app/assets/stylesheets/mobile/style.css
@@ -757,6 +757,11 @@ and (max-width: 480px) {
         display: none;
         visibility: hidden;
     } */
+
+    .hide {
+        display: none;
+        visibility: hidden;
+    }
     h1.title {
         color: #0099ef;
         font-size: 26px !important;
